test/configCases/errors/self-reexport/c2.js
export { something } from "./c1";
